@@ -1,3 +1,7 @@
+* Mon Apr 24 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.2-0
+- Add 'puppet_enterprise::profile::database' class definition to the pe_classlist
+  and move the postgresql components under that class.
+
 * Thu Apr 13 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.1-0
 - Add 'puppet_enterprise::profile::primary_master_replica' class definition
   to the class list to work around an issue in production
